# beads_rust

./: .gitignore  Cargo.toml  README.md  UPGRADE_LOG.md  rust-toolchain.toml
.beads/: issues.jsonl
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  INSTALLING.md  TROUBLESHOOTING.md
src/: logging.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: agents.rs  audit.rs  blocked.rs  config.rs  create.rs  delete.rs  doctor.rs  epic.rs  history.rs  info.rs  init.rs  mod.rs  orphans.rs  ready.rs  schema.rs  search.rs  stats.rs  sync.rs  update.rs  upgrade.rs  where.rs
src/config/: mod.rs  routing.rs
src/error/: mod.rs
src/format/: markdown.rs
src/model/: mod.rs
src/output/: context.rs
src/storage/: compat.rs  events.rs  mod.rs  schema.rs  sqlite.rs
src/sync/: history.rs  mod.rs
src/util/: hash.rs  time.rs
src/validation/: mod.rs
tests/: bench_synthetic_scale.rs  conformance.rs  e2e_basic_lifecycle.rs  e2e_concurrency.rs  e2e_list_comprehensive.rs  e2e_ready.rs  e2e_routing.rs  e2e_sync_failure_injection.rs  e2e_sync_git_safety.rs  e2e_workspace_commands.rs  repro_auto_flush_inefficiency.rs  storage_blocked_cache.rs  storage_export_atomic.rs  storage_invariants.rs  storage_ready.rs  workspace_failure_replay.rs
tests/common/: cli.rs  dataset_registry.rs  mod.rs  scenarios.rs
tests/fixtures/workspace_failures/: README.md
tests/fixtures/workspace_failures/corrupt_db_text/: fixture.json
tests/fixtures/workspace_failures/db_jsonl_disagreement/: fixture.json
tests/fixtures/workspace_failures/duplicate_config_rows/: fixture.json
tests/fixtures/workspace_failures/jsonl_conflict_markers/: fixture.json
tests/fixtures/workspace_failures/metadata_custom_paths/: fixture.json
tests/fixtures/workspace_failures/sidecar_wal_without_shm/: fixture.json
tests/snapshots/snapshots/: snapshots__snapshots__cli_output__help_output.snap
